--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <!-- Step 1: Greeting -->
         <div class="step" id="step1">
-            <h1>Happy Birthday, My Love!</h1>
+            <h1>Happy Birthday, BESTU !</h1>
             <p>I've created something magical just for you.</p>
             <p>Are you ready to begin this special journey?</p>
             <img src="https://png.pngtree.com/png-vector/20250422/ourmid/pngtree-cute-girl-holding-birthday-cake-smiling-cheerfully-png-image_16067658.png" style="height: 200px;width: 200px;" alt="">
@@ -112,3 +112,4 @@
 </body>
 
 </html>
+
